Quorum3/Library/Tests/Templating/Fail/B_11.quorum
class B is A<integer>

end